@startuml
interface cubibon.callAssistant.text2speech.Text2SpeechPlayerInterface {
+ CallbackManager<C, Unit> onBeginPlayingCallbacks
+ CallbackManager<C, Unit> onEndPlayingCallbacks
}

abstract class cubibon.callAssistant.text2speech.Text2SpeechPlayer {
}
abstract class cubibon.callAssistant.text2speech.Text2Speech {
+  onResultCallbacks
+ <<Create>> Text2Speech(Text2SpeechPlayer<*>)
# InputStream? fetchAudio(String)
+ void doComputeAsync(String,String)
+ void doWait(String)
+ void doStop(String)
}


class cubibon.callAssistant.text2speech.PlaybackData {
+ <<Create>> PlaybackData(PlaybackEvent?,String)
}

class cubibon.callAssistant.text2speech.DesktopAudioPlayer {
+  onBeginPlayingCallbacks
+  onEndPlayingCallbacks
- AdvancedPlayer? player
+ void doComputeAsync(InputStream,String)
+ void doStop(String)
}


class cubibon.callAssistant.text2speech.AwsPolly$Companion {
-  VOICE_NAME
-  VOICE_TYPE
-  MAX_TEXT_LENGTH
}

class cubibon.callAssistant.text2speech.AwsPolly {
- PollyClient? client
- Voice? voice
+ <<Create>> AwsPolly(Text2SpeechPlayer<C>)
- PollyClient initializeClient()
- Voice initializeVoice()
+ void doActivate(String)
+ void doDeactivate(String)
+ InputStream? fetchAudio(String)
}




cubibon.callAssistant.text2speech.ServiceInterface <|.. cubibon.callAssistant.text2speech.Text2SpeechPlayerInterface
cubibon.callAssistant.text2speech.Service <|-- cubibon.callAssistant.text2speech.Text2SpeechPlayer
cubibon.callAssistant.text2speech.Text2SpeechPlayerInterface <|.. cubibon.callAssistant.text2speech.Text2SpeechPlayer
cubibon.callAssistant.text2speech.ReusableService <|-- cubibon.callAssistant.text2speech.Text2Speech
cubibon.callAssistant.CallbackInput <|.. cubibon.callAssistant.text2speech.PlaybackData
cubibon.callAssistant.text2speech.Text2SpeechPlayer <|-- cubibon.callAssistant.text2speech.DesktopAudioPlayer
cubibon.callAssistant.text2speech.AwsPolly +.. cubibon.callAssistant.text2speech.AwsPolly$Companion
cubibon.callAssistant.text2speech.Text2Speech <|-- cubibon.callAssistant.text2speech.AwsPolly
@enduml